# anchor4git

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: upload.yml
src/: __init__.py  __main__.py  consts.py  utils.py
src/cmds/: config.py  fetch.py  goto.py  info.py  save.py  upload.py
tests/: conftest.py  test_cmds.py
