[build-system]
requires = ["uv_build>=0.11.26,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "src"
module-root = ""

[project]
name = "anchor4git"
version = "0.1.1"
description = "A minimal git client CLI for remote repositories."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "I0SL-1.0" }

authors = [
    { name = "Abhirup Hajra", email = "me@abhirup.co.in" },
]

maintainers = [
    { name = "Invoke0", email = "contact@invoke0.indevs.in" },
]

keywords = ["anchor", "git", "workflow", "vcs", "anchor4git"]

classifiers = [
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
]

dependencies = [
    "typer>=0.16",
    "rich>=10.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2"
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.scripts]
anchor4git = "src:main"
ag = "src:main"

[project.urls]
Homepage = "https://invoke0.indevs.in/product/anchor4git"
Documentation = "https://docs.invoke0.indevs.in/anchor4git"
Repository = "https://github.com/invoke-zero/anchor4git"
Issues = "https://github.com/invoke-zero/anchor4git/issues"
Changelog = "https://github.com/invoke-zero/anchor4git/releases"